[gd_scene load_steps=10 format=3 uid="uid://c1vk4ku88okdi"]

[ext_resource type="PackedScene" uid="uid://31l2tc4y7ox4" path="res://Player/player.tscn" id="1_lxgxp"]
[ext_resource type="Script" path="res://World/world.gd" id="1_xh5yn"]
[ext_resource type="Texture2D" uid="uid://cxrwmo4pt18qc" path="res://Assets/Sprites/Tiles/Grass.png" id="2_b4chg"]
[ext_resource type="Texture2D" uid="uid://b06qr8kjfd1nv" path="res://Assets/Sprites/Crops/Crop_Wheat.png" id="4_u1alg"]
[ext_resource type="Texture2D" uid="uid://o1enq3e478qc" path="res://Assets/Sprites/Crops/Crop_Potato.png" id="5_0j0cd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_25s84"]
texture = ExtResource("2_b4chg")
texture_region_size = Vector2i(12, 12)
0:0/0 = 0
1:0/0 = 0
1:0/0/custom_data_0 = true
1:0/0/custom_data_2 = true
2:0/0 = 0
2:0/0/custom_data_0 = true
2:0/0/custom_data_4 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7e7he"]
texture = ExtResource("4_u1alg")
texture_region_size = Vector2i(13, 13)
0:0/0 = 0
0:0/0/custom_data_1 = true
1:0/0 = 0
1:0/0/custom_data_1 = true
1:0/0/custom_data_3 = 1
2:0/0 = 0
2:0/0/custom_data_1 = true
2:0/0/custom_data_3 = 2
3:0/0 = 0
3:0/0/custom_data_1 = true
3:0/0/custom_data_3 = 3
3:0/0/custom_data_5 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_olmym"]
texture = ExtResource("5_0j0cd")
texture_region_size = Vector2i(13, 13)
0:0/0 = 0
0:0/0/custom_data_1 = true
1:0/0 = 0
1:0/0/custom_data_1 = true
1:0/0/custom_data_3 = 1
2:0/0 = 0
2:0/0/custom_data_1 = true
2:0/0/custom_data_3 = 2
3:0/0 = 0
3:0/0/custom_data_1 = true
3:0/0/custom_data_3 = 3
3:0/0/custom_data_5 = true

[sub_resource type="TileSet" id="TileSet_vrd03"]
tile_size = Vector2i(12, 12)
custom_data_layer_0/name = "can_place_seeds"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "has_seeds"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "can_water"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "seed_level"
custom_data_layer_3/type = 2
custom_data_layer_4/name = "has_been_watered"
custom_data_layer_4/type = 1
custom_data_layer_5/name = "can_harvest"
custom_data_layer_5/type = 1
sources/0 = SubResource("TileSetAtlasSource_25s84")
sources/1 = SubResource("TileSetAtlasSource_7e7he")
sources/2 = SubResource("TileSetAtlasSource_olmym")

[node name="World" type="Node2D"]
script = ExtResource("1_xh5yn")
metadata/_edit_vertical_guides_ = [15.0]

[node name="Player" parent="." instance=ExtResource("1_lxgxp")]
z_index = 2

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vrd03")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(-131072, 0, 1610612736, -65536, 0, 0, 0, 0, 0, 65536, 0, 1610612736, -131071, 0, 805306368, -65535, 0, 0, 1, 0, 1610612736, 65537, 0, 805306368, -131070, 0, 1610612736, -65534, 0, 0, 2, 0, 805306368, 65538, 0, 1610612736, -131069, 0, 1610612736, -65533, 0, 1610612736, 3, 0, 0, 65539, 0, 1610612736, -131068, 0, 0, -65532, 0, 1342177280, 4, 0, 805306368, 65540, 0, 1342177280, -589843, 0, 0, -524307, 0, 1610612736, -458771, 0, 1610612736, -393235, 0, 0, -327699, 0, 805306368, -262163, 0, 1342177280, -196627, 0, 0, -131091, 0, 0, -65555, 0, 1610612736, -19, 0, 805306368, 65517, 0, 805306368, 131053, 0, 0, 196589, 0, 805306368, 262125, 0, 1342177280, 327661, 0, 1610612736, 393197, 0, 1342177280, 458733, 0, 0, 524269, 0, 805306368, 589805, 0, 1610612736, 655341, 0, 1610612736, -589842, 0, 805306368, -524306, 0, 0, -458770, 0, 1342177280, -393234, 0, 0, -327698, 0, 805306368, -262162, 0, 1342177280, -196626, 0, 0, -131090, 0, 1342177280, -65554, 0, 1342177280, -18, 0, 805306368, 65518, 0, 805306368, 131054, 0, 805306368, 196590, 0, 805306368, 262126, 0, 805306368, 327662, 0, 805306368, 393198, 0, 805306368, 458734, 0, 0, 524270, 0, 1610612736, 589806, 0, 1610612736, 655342, 0, 1342177280, -589841, 0, 0, -524305, 0, 0, -458769, 0, 1610612736, -393233, 0, 1610612736, -327697, 0, 805306368, -262161, 0, 1342177280, -196625, 0, 1610612736, -131089, 0, 1342177280, -65553, 0, 0, -17, 0, 805306368, 65519, 0, 1610612736, 131055, 0, 805306368, 196591, 0, 1342177280, 262127, 0, 1342177280, 327663, 0, 1342177280, 393199, 0, 805306368, 458735, 0, 1610612736, 524271, 0, 805306368, 589807, 0, 805306368, 655343, 0, 0, -589840, 0, 805306368, -524304, 0, 805306368, -458768, 0, 805306368, -393232, 0, 1342177280, -327696, 0, 1342177280, -262160, 0, 0, -196624, 0, 1342177280, -131088, 0, 805306368, -65552, 0, 1610612736, -16, 0, 805306368, 65520, 0, 805306368, 131056, 0, 0, 196592, 0, 1342177280, 262128, 0, 1610612736, 327664, 0, 1610612736, 393200, 0, 1610612736, 458736, 0, 0, 524272, 0, 0, 589808, 0, 0, 655344, 0, 1610612736, -589839, 0, 805306368, -524303, 0, 1610612736, -458767, 0, 0, -393231, 0, 805306368, -327695, 0, 1610612736, -262159, 0, 0, -196623, 0, 805306368, -131087, 0, 0, -65551, 0, 805306368, -15, 0, 1610612736, 65521, 0, 1610612736, 131057, 0, 1610612736, 196593, 0, 0, 262129, 0, 1610612736, 327665, 0, 0, 393201, 0, 805306368, 458737, 0, 805306368, 524273, 0, 0, 589809, 0, 0, 655345, 0, 1610612736, -589838, 0, 1610612736, -524302, 0, 1342177280, -458766, 0, 805306368, -393230, 0, 1342177280, -327694, 0, 0, -262158, 0, 0, -196622, 0, 0, -131086, 0, 805306368, -65550, 0, 1342177280, -14, 0, 1342177280, 65522, 0, 1610612736, 131058, 0, 0, 196594, 0, 1610612736, 262130, 0, 0, 327666, 0, 1342177280, 393202, 0, 1342177280, 458738, 0, 1610612736, 524274, 0, 1610612736, 589810, 0, 1342177280, 655346, 0, 805306368, -589837, 0, 805306368, -524301, 0, 1610612736, -458765, 0, 0, -393229, 0, 1610612736, -327693, 0, 0, -262157, 0, 805306368, -196621, 0, 805306368, -131085, 0, 1610612736, -65549, 0, 1610612736, -13, 0, 1610612736, 65523, 0, 805306368, 131059, 0, 1342177280, 196595, 0, 1610612736, 262131, 0, 0, 327667, 0, 1342177280, 393203, 0, 805306368, 458739, 0, 1610612736, 524275, 0, 1342177280, 589811, 0, 1610612736, 655347, 0, 0, -589836, 0, 1610612736, -524300, 0, 1610612736, -458764, 0, 1610612736, -393228, 0, 0, -327692, 0, 1610612736, -262156, 0, 0, -196620, 0, 805306368, -131084, 0, 1610612736, -65548, 0, 0, -12, 0, 1610612736, 65524, 0, 805306368, 131060, 0, 1610612736, 196596, 0, 805306368, 262132, 0, 1610612736, 327668, 0, 1342177280, 393204, 0, 1342177280, 458740, 0, 0, 524276, 0, 805306368, 589812, 0, 0, 655348, 0, 0, -589835, 0, 1342177280, -524299, 0, 805306368, -458763, 0, 1342177280, -393227, 0, 1610612736, -327691, 0, 1610612736, -262155, 0, 805306368, -196619, 0, 1610612736, -131083, 0, 805306368, -65547, 0, 0, -11, 0, 1610612736, 65525, 0, 805306368, 131061, 0, 1610612736, 196597, 0, 1610612736, 262133, 0, 1342177280, 327669, 0, 1610612736, 393205, 0, 1342177280, 458741, 0, 805306368, 524277, 0, 0, 589813, 0, 0, 655349, 0, 0, -589834, 0, 1610612736, -524298, 0, 805306368, -458762, 0, 805306368, -393226, 0, 1610612736, -327690, 0, 1342177280, -262154, 0, 0, -196618, 0, 1342177280, -131082, 0, 805306368, -65546, 0, 805306368, -10, 0, 1610612736, 65526, 0, 1610612736, 131062, 0, 1610612736, 196598, 0, 805306368, 262134, 0, 1610612736, 327670, 0, 1342177280, 393206, 0, 805306368, 458742, 0, 805306368, 524278, 0, 0, 589814, 0, 1342177280, 655350, 0, 805306368, -589833, 0, 1610612736, -524297, 0, 1610612736, -458761, 0, 1342177280, -393225, 0, 1342177280, -327689, 0, 0, -262153, 0, 1342177280, -196617, 0, 1342177280, -131081, 0, 0, -65545, 0, 1342177280, -9, 0, 805306368, 65527, 0, 1342177280, 131063, 0, 0, 196599, 0, 0, 262135, 0, 805306368, 327671, 0, 1610612736, 393207, 0, 805306368, 458743, 0, 0, 524279, 0, 1610612736, 589815, 0, 1342177280, 655351, 0, 0, -589832, 0, 0, -524296, 0, 1342177280, -458760, 0, 0, -393224, 0, 805306368, -327688, 0, 0, -262152, 0, 805306368, -196616, 0, 1342177280, -131080, 0, 805306368, -65544, 0, 1342177280, -8, 0, 0, 65528, 0, 0, 131064, 0, 805306368, 196600, 0, 1342177280, 262136, 0, 0, 327672, 0, 805306368, 393208, 0, 805306368, 458744, 0, 0, 524280, 0, 1610612736, 589816, 0, 1342177280, 655352, 0, 1610612736, -589831, 0, 805306368, -524295, 0, 1610612736, -458759, 0, 1342177280, -393223, 0, 1342177280, -327687, 0, 1342177280, -262151, 0, 1342177280, -196615, 0, 1342177280, -131079, 0, 1610612736, -65543, 0, 1610612736, -7, 0, 805306368, 65529, 0, 1610612736, 131065, 0, 1342177280, 196601, 0, 1610612736, 262137, 0, 805306368, 327673, 0, 1342177280, 393209, 0, 805306368, 458745, 0, 1610612736, 524281, 0, 1610612736, 589817, 0, 805306368, 655353, 0, 1610612736, -589830, 0, 0, -524294, 0, 1342177280, -458758, 0, 0, -393222, 0, 805306368, -327686, 0, 805306368, -262150, 0, 1610612736, -196614, 0, 1610612736, -131078, 0, 1342177280, -65542, 0, 0, -6, 0, 805306368, 65530, 0, 0, 131066, 0, 1610612736, 196602, 0, 805306368, 262138, 0, 1610612736, 327674, 0, 1342177280, 393210, 0, 805306368, 458746, 0, 805306368, 524282, 0, 805306368, 589818, 0, 1342177280, 655354, 0, 0, -589829, 0, 1610612736, -524293, 0, 1610612736, -458757, 0, 1342177280, -393221, 0, 0, -327685, 0, 1610612736, -262149, 0, 0, -196613, 0, 805306368, -131077, 0, 0, -65541, 0, 805306368, -5, 0, 1342177280, 65531, 0, 1342177280, 131067, 0, 0, 196603, 0, 0, 262139, 0, 805306368, 327675, 0, 0, 393211, 0, 1342177280, 458747, 0, 0, 524283, 0, 1610612736, 589819, 0, 1342177280, 655355, 0, 1610612736, -589828, 0, 1610612736, -524292, 0, 1342177280, -458756, 0, 805306368, -393220, 0, 0, -327684, 0, 0, -262148, 0, 805306368, -196612, 0, 805306368, -131076, 0, 805306368, -65540, 0, 0, -4, 0, 805306368, 65532, 0, 805306368, 131068, 0, 805306368, 196604, 0, 1342177280, 262140, 0, 1342177280, 327676, 0, 805306368, 393212, 0, 0, 458748, 0, 1610612736, 524284, 0, 0, 589820, 0, 1610612736, 655356, 0, 1342177280, -589827, 0, 0, -524291, 0, 805306368, -458755, 0, 1610612736, -393219, 0, 805306368, -327683, 0, 805306368, -262147, 0, 1610612736, -196611, 0, 1610612736, -131075, 0, 1342177280, -65539, 0, 1342177280, -3, 0, 805306368, 65533, 0, 1610612736, 131069, 0, 0, 196605, 0, 1342177280, 262141, 0, 1342177280, 327677, 0, 1610612736, 393213, 0, 0, 458749, 0, 1610612736, 524285, 0, 1342177280, 589821, 0, 0, 655357, 0, 1610612736, -589826, 0, 805306368, -524290, 0, 805306368, -458754, 0, 1610612736, -393218, 0, 1342177280, -327682, 0, 805306368, -262146, 0, 805306368, -196610, 0, 1342177280, -131074, 0, 1610612736, -65538, 0, 0, -2, 0, 1610612736, 65534, 0, 805306368, 131070, 0, 1342177280, 196606, 0, 0, 262142, 0, 1342177280, 327678, 0, 1342177280, 393214, 0, 0, 458750, 0, 1342177280, 524286, 0, 1342177280, 589822, 0, 0, 655358, 0, 805306368, -589825, 0, 805306368, -524289, 0, 805306368, -458753, 0, 1342177280, -393217, 0, 1610612736, -327681, 0, 0, -262145, 0, 1342177280, -196609, 0, 0, -131073, 0, 805306368, -65537, 0, 1610612736, -1, 0, 1342177280, 65535, 0, 1610612736, 131071, 0, 0, 196607, 0, 0, 262143, 0, 805306368, 327679, 0, 1342177280, 393215, 0, 0, 458751, 0, 1610612736, 524287, 0, 0, 589823, 0, 1342177280, 655359, 0, 0, -655360, 0, 805306368, -589824, 0, 805306368, -524288, 0, 0, -458752, 0, 1610612736, -393216, 0, 805306368, -327680, 0, 0, -262144, 0, 1610612736, -196608, 0, 805306368, 131072, 0, 1342177280, 196608, 0, 0, 262144, 0, 1342177280, 327680, 0, 805306368, 393216, 0, 1342177280, 458752, 0, 1342177280, 524288, 0, 1342177280, 589824, 0, 0, -655359, 0, 805306368, -589823, 0, 805306368, -524287, 0, 0, -458751, 0, 805306368, -393215, 0, 805306368, -327679, 0, 1342177280, -262143, 0, 805306368, -196607, 0, 1342177280, 131073, 0, 1342177280, 196609, 0, 1342177280, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 1342177280, 524289, 0, 1610612736, 589825, 0, 1610612736, -655358, 0, 1610612736, -589822, 0, 0, -524286, 0, 0, -458750, 0, 1610612736, -393214, 0, 0, -327678, 0, 0, -262142, 0, 1610612736, -196606, 0, 0, 131074, 0, 1342177280, 196610, 0, 805306368, 262146, 0, 805306368, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 1610612736, 589826, 0, 1610612736, -655357, 0, 0, -589821, 0, 0, -524285, 0, 0, -458749, 0, 1610612736, -393213, 0, 0, -327677, 0, 805306368, -262141, 0, 805306368, -196605, 0, 1342177280, 131075, 0, 1610612736, 196611, 0, 1610612736, 262147, 0, 1610612736, 327683, 0, 805306368, 393219, 0, 1342177280, 458755, 0, 0, 524291, 0, 805306368, 589827, 0, 1342177280, -655356, 0, 1610612736, -589820, 0, 805306368, -524284, 0, 1342177280, -458748, 0, 1610612736, -393212, 0, 1342177280, -327676, 0, 805306368, -262140, 0, 805306368, -196604, 0, 1610612736, 131076, 0, 0, 196612, 0, 0, 262148, 0, 1342177280, 327684, 0, 805306368, 393220, 0, 805306368, 458756, 0, 805306368, 524292, 0, 1610612736, 589828, 0, 1610612736, -655355, 0, 1342177280, -589819, 0, 1610612736, -524283, 0, 1342177280, -458747, 0, 1610612736, -393211, 0, 0, -327675, 0, 1610612736, -262139, 0, 805306368, -196603, 0, 0, -131067, 0, 1610612736, -65531, 0, 1610612736, 5, 0, 0, 65541, 0, 0, 131077, 0, 1610612736, 196613, 0, 1342177280, 262149, 0, 805306368, 327685, 0, 805306368, 393221, 0, 1342177280, 458757, 0, 805306368, 524293, 0, 0, 589829, 0, 1342177280, -655354, 0, 0, -589818, 0, 1610612736, -524282, 0, 1342177280, -458746, 0, 805306368, -393210, 0, 805306368, -327674, 0, 805306368, -262138, 0, 1610612736, -196602, 0, 805306368, -131066, 0, 0, -65530, 0, 1610612736, 6, 0, 1342177280, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 1342177280, 327686, 0, 805306368, 393222, 0, 1342177280, 458758, 0, 0, 524294, 0, 805306368, 589830, 0, 805306368, -655353, 0, 0, -589817, 0, 805306368, -524281, 0, 1342177280, -458745, 0, 1610612736, -393209, 0, 805306368, -327673, 0, 1342177280, -262137, 0, 805306368, -196601, 0, 1342177280, -131065, 0, 0, -65529, 0, 1610612736, 7, 0, 805306368, 65543, 0, 1342177280, 131079, 0, 805306368, 196615, 0, 1610612736, 262151, 0, 1342177280, 327687, 0, 805306368, 393223, 0, 0, 458759, 0, 1342177280, 524295, 0, 805306368, 589831, 0, 1342177280, -655352, 0, 805306368, -589816, 0, 805306368, -524280, 0, 805306368, -458744, 0, 805306368, -393208, 0, 1610612736, -327672, 0, 1342177280, -262136, 0, 1342177280, -196600, 0, 0, -131064, 0, 0, -65528, 0, 805306368, 8, 0, 0, 65544, 0, 805306368, 131080, 0, 0, 196616, 0, 1342177280, 262152, 0, 1610612736, 327688, 0, 0, 393224, 0, 1610612736, 458760, 0, 1610612736, 524296, 0, 1342177280, 589832, 0, 1610612736, -655351, 0, 1610612736, -589815, 0, 1610612736, -524279, 0, 805306368, -458743, 0, 805306368, -393207, 0, 1610612736, -327671, 0, 1342177280, -262135, 0, 805306368, -196599, 0, 1610612736, -131063, 0, 1342177280, -65527, 0, 1342177280, 9, 0, 1342177280, 65545, 0, 1342177280, 131081, 0, 805306368, 196617, 0, 1610612736, 262153, 0, 1610612736, 327689, 0, 1342177280, 393225, 0, 0, 458761, 0, 805306368, 524297, 0, 1342177280, 589833, 0, 1342177280, -655350, 0, 1610612736, -589814, 0, 805306368, -524278, 0, 1342177280, -458742, 0, 1342177280, -393206, 0, 1342177280, -327670, 0, 0, -262134, 0, 0, -196598, 0, 805306368, -131062, 0, 805306368, -65526, 0, 805306368, 10, 0, 805306368, 65546, 0, 1342177280, 131082, 0, 805306368, 196618, 0, 1610612736, 262154, 0, 805306368, 327690, 0, 1342177280, 393226, 0, 0, 458762, 0, 0, 524298, 0, 1610612736, 589834, 0, 0, -655349, 0, 1610612736, -589813, 0, 0, -524277, 0, 0, -458741, 0, 0, -393205, 0, 1342177280, -327669, 0, 1342177280, -262133, 0, 0, -196597, 0, 805306368, -131061, 0, 1342177280, -65525, 0, 1610612736, 11, 0, 1342177280, 65547, 0, 1610612736, 131083, 0, 805306368, 196619, 0, 1342177280, 262155, 0, 1342177280, 327691, 0, 1342177280, 393227, 0, 1342177280, 458763, 0, 805306368, 524299, 0, 1610612736, 589835, 0, 1342177280, -655348, 0, 1610612736, -589812, 0, 1342177280, -524276, 0, 1610612736, -458740, 0, 805306368, -393204, 0, 1342177280, -327668, 0, 0, -262132, 0, 0, -196596, 0, 805306368, -131060, 0, 1610612736, -65524, 0, 0, 12, 0, 1610612736, 65548, 0, 1610612736, 131084, 0, 805306368, 196620, 0, 1342177280, 262156, 0, 1610612736, 327692, 0, 805306368, 393228, 0, 1342177280, 458764, 0, 0, 524300, 0, 1610612736, 589836, 0, 0, -655347, 0, 1342177280, -589811, 0, 0, -524275, 0, 1610612736, -458739, 0, 1610612736, -393203, 0, 1610612736, -327667, 0, 1342177280, -262131, 0, 805306368, -196595, 0, 0, -131059, 0, 1610612736, -65523, 0, 0, 13, 0, 1610612736, 65549, 0, 1342177280, 131085, 0, 1610612736, 196621, 0, 1610612736, 262157, 0, 1342177280, 327693, 0, 1342177280, 393229, 0, 0, 458765, 0, 1610612736, 524301, 0, 1342177280, 589837, 0, 1342177280, -655346, 0, 1342177280, -589810, 0, 1610612736, -524274, 0, 0, -458738, 0, 1610612736, -393202, 0, 0, -327666, 0, 1610612736, -262130, 0, 0, -196594, 0, 805306368, -131058, 0, 1342177280, -65522, 0, 1610612736, 14, 0, 1610612736, 65550, 0, 0, 131086, 0, 1610612736, 196622, 0, 1342177280, 262158, 0, 1610612736, 327694, 0, 1610612736, 393230, 0, 1342177280, 458766, 0, 805306368, 524302, 0, 0, 589838, 0, 805306368, -655345, 0, 0, -589809, 0, 1342177280, -524273, 0, 0, -458737, 0, 0, -393201, 0, 805306368, -327665, 0, 1610612736, -262129, 0, 0, -196593, 0, 805306368, -131057, 0, 1610612736, -65521, 0, 805306368, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 1342177280, 262159, 0, 0, 327695, 0, 1610612736, 393231, 0, 1610612736, 458767, 0, 805306368, 524303, 0, 1610612736, 589839, 0, 1342177280, -655344, 0, 805306368, -589808, 0, 1610612736, -524272, 0, 0, -458736, 0, 1610612736, -393200, 0, 1342177280, -327664, 0, 0, -262128, 0, 1610612736, -196592, 0, 1342177280, -131056, 0, 1610612736, -65520, 0, 0, 16, 0, 0, 65552, 0, 1610612736, 131088, 0, 805306368, 196624, 0, 1342177280, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 805306368, 524304, 0, 805306368, 589840, 0, 1342177280, -655343, 0, 805306368, -589807, 0, 805306368, -524271, 0, 0, -458735, 0, 805306368, -393199, 0, 1342177280, -327663, 0, 0, -262127, 0, 805306368, -196591, 0, 0, -131055, 0, 1610612736, -65519, 0, 805306368, 17, 0, 1342177280, 65553, 0, 1342177280, 131089, 0, 1610612736, 196625, 0, 1610612736, 262161, 0, 805306368, 327697, 0, 0, 393233, 0, 1342177280, 458769, 0, 0, 524305, 0, 1342177280, 589841, 0, 805306368)
layer_1/name = "Crops"
layer_1/z_index = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DayLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 14.0
offset_top = 579.0
offset_right = 62.0
offset_bottom = 602.0
text = "Day: 0"

[node name="SeedsLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 513.0
offset_right = 78.0
offset_bottom = 536.0
text = "Seeds: 0"

[node name="NextDayButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 605.0
offset_right = 94.0
offset_bottom = 636.0
text = "Next Day"

[node name="BuySeedsButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 103.0
offset_top = 605.0
offset_right = 182.0
offset_bottom = 636.0
text = "Buy Seeds"

[node name="ToolLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 547.0
offset_right = 108.0
offset_bottom = 570.0
text = "Tool: Shovel"

[node name="MoneyLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 493.0
offset_right = 108.0
offset_bottom = 516.0
text = "Money: $0"

[connection signal="pressed" from="CanvasLayer/Control/NextDayButton" to="." method="_on_next_day_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/BuySeedsButton" to="." method="_on_buy_seeds_button_pressed"]
